//
// Chapter 04
//    Nested Type, Oneof

//
// 프로토3 문법을 사용한다고 지정한다.
// 이것을 생략할 경우 프로토2 문법으로 해석한다.
syntax = "proto3";

//
// 패키지 이름 (= 네임스페이스)
// 다른 프로토 파일과 구분되도록 할 것.
package chapter04;

//
// Nested Types
message MyNestedBox {
    //
    // 메세지 내부에 메세지 타입을 선언할 수 있습니다.
    message BooleanBox {
        bool val = 1;
    }

    //
    // 얼마든지 깊게 작성해도 됩니다.
    message NumbericBox {
        message UInt32Box {
            int32 val = 1;
        }
        message UInt64Box {
            int64 val = 1;
        }
    }
}

//
// Oneof
message MyUnionBox {
    //
    // oneof 필드는 uint32 또는 string 값을 가질 수 있습니다.
    oneof oneof {
        uint32 oneof_uint32 = 1;
        string oneof_string = 2;
    }
}

//
// 요청 메세지
message EchoObject {
    //
    // NestedType을 사용하려면
    // 부모에서부터 차례대로 기술합니다.
    MyNestedBox.NumbericBox.UInt32Box uint32box = 1;

    MyUnionBox unionBox = 2;
}

//
// 서비스 명세
service Echo {
    rpc echo (EchoObject) returns (EchoObject);
}